--- a/app/template/fontend/template1/index.html
+++ b/app/template/fontend/template1/index.html
@@ -18,7 +18,7 @@
                   <!-- Wrapper for slides --> 				    
                   <div class="carousel-inner">
                      <%foreach $slides as $key=>$item%> 					      
-                     <div class="item <%if $key==0%> active<%/if%>"> 					        <img src="<%$smarty.const.ACW_BASE_URL%><%$item.img_path%>" alt="" style="width:100%; height:auto;"> 	<!-- height:358;		 -->		      
+                     <div class="item <%if $key==0%> active<%/if%>"> 					        <img src="<%$smarty.const.ACW_BASE_URL%><%$item.img_path%>" alt="" style="width:100%; "> 	<!-- height:358;		 -->		      
                      </div>
                      <%/foreach%> 				    
                   </div>
