--- a/app/template/fontend/template1/success.html
+++ b/app/template/fontend/template1/success.html
@@ -37,7 +37,7 @@
                   <thead>
                      <tr>
                         <th class="product-name">Sản phẩm</th>
-                        <th class="product-total">Tổng cộng</th>
+                        <th class="product-total" style="text-align: right">Tổng cộng</th>
                      </tr>
                   </thead>
                   <tbody>
@@ -46,7 +46,7 @@
                         <td class="product-name">
                            <a href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$item.pro_no%>"><%$item.pro_name%> - <%$item.size%> </a> <strong class="product-quantity">× <%$item.qty%></strong>  
                         </td>
-                        <td class="product-total">
+                        <td class="product-total" style="text-align: right">
                            <span class="woocommerce-Price-amount amount"><%Sanpham_model::currency_format($item.total)%><span class="woocommerce-Price-currencySymbol">₫</span></span>  
                         </td>
                      </tr>
@@ -54,16 +54,20 @@
                   </tbody>
                   <tfoot>
                      <tr>
-                        <th scope="row">Tổng số phụ:</th>
-                        <td><span class="woocommerce-Price-amount amount"><%Sanpham_model::currency_format($ord.total_amount)%><span class="woocommerce-Price-currencySymbol">₫</span></span></td>
+                        <th scope="row">Tổng tiền:</th>
+                        <td style="text-align: right"><span class="woocommerce-Price-amount amount" ><%Sanpham_model::currency_format($ord.total_amount-$ord.total_vat)%><span class="woocommerce-Price-currencySymbol">₫</span></span></td>
+                     </tr>
+                     <tr>
+                        <th scope="row">Tổng VAT:</th>
+                        <td style="text-align: right"><span class="woocommerce-Price-amount amount"><%Sanpham_model::currency_format($ord.total_vat)%><span class="woocommerce-Price-currencySymbol">₫</span></span></td>
                      </tr>
                      <tr>
                         <th scope="row">Phương thức thanh toán:</th>
-                        <td><%$ord.payment_method%></td>
+                        <td style="text-align: right"><%$ord.payment_method%></td>
                      </tr>
                      <tr>
-                        <th scope="row">Tổng cộng:</th>
-                        <td><span class="woocommerce-Price-amount amount"><%Sanpham_model::currency_format($ord.total_amount)%><span class="woocommerce-Price-currencySymbol">₫</span></span></td>
+                        <th scope="row">Tổng tiền thanh toán:</th>
+                        <td style="text-align: right"><span class="woocommerce-Price-amount amount"><%Sanpham_model::currency_format($ord.total_amount)%><span class="woocommerce-Price-currencySymbol">₫</span></span></td>
                      </tr>
                   </tfoot>
                </table>
