--- a/app/template/fontend/template1/danhmuc/list.html
+++ b/app/template/fontend/template1/danhmuc/list.html
@@ -27,7 +27,9 @@
                               <span class="amount_old"><%Sanpham_model::currency_format($pro.price_old)%>₫</span>
                            <%/if%>                         
                         </div>
-                        <a href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$pro.pro_no%>" class="btn-cart"></a>
+                        <a href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$pro.pro_no%>" class="btn-cart img-circle">
+                           <span class="fa-opencart"></span>
+                        </a>
                      </div>
                   </div>
                </div>
