--- a/app/template/fontend/template1/include/left.html
+++ b/app/template/fontend/template1/include/left.html
@@ -27,9 +27,9 @@
     <div class="panel panel-hotline">
             <div class="panel-body">
                 <div class="mua-nhanh">HOTLINE</div>
-                <div class="phone">(844)91 332 5588</div>
+                <div class="phone">0868 191 666</div>
                 <a href="#"><div class="mua-nhanh2">Chuyên cung cấp sỉ</div></a>
-                <div class="phone2">(844)91 332 5588 </div>
+                <div class="phone2">0868 191 666 </div>
             </div>
     </div>
     <div class="panel form-face">
@@ -42,16 +42,16 @@
     </div>
     <div class="panel panel-icon lien-he-nhanh">
             <div class="panel-heading">
-                <span>Liên Hệ Nhanh</span>
+                <span>Liên hệ nhanh</span>
             </div>
             <div class="panel-body">
                 <p class="phone"><span>0868 191 666 - 0868 565 181</span></p>
-                <p class="email"> <span>DANCO868191666@gmail.com</span></p>
+                <p class="email"> <span><a href="https://mail.google.com/mail" target="_blank">DANCO868191666@gmail.com</a></span></p>
             </div>
     </div>
     <div class="panel panel-cam-ket">
             <div class="panel-heading">
-                <span>Cam Kết với khách Hàng</span>
+                <span>Cam Kết với khách hàng</span>
             </div>
             <div class="panel-body">
                 <ul>
