--- a/app/template/fontend/template1/index/list.html
+++ b/app/template/fontend/template1/index/list.html
@@ -30,7 +30,9 @@
                               <span class="amount_old"><%Sanpham_model::currency_format($pro.price_old)%>₫</span>
                            <%/if%>
                         </div>
-                        <a href="/checkout?add-to-cart=188" class="btn-cart"></a>
+                        <a href="/checkout?add-to-cart=188" class="btn-cart img-circle">
+                           <span class="fa-opencart"></span>
+                        </a>
                      </div>
                   </div>
                </div>
