--- a/app/template/fontend/template1/sanpham.html
+++ b/app/template/fontend/template1/sanpham.html
@@ -69,7 +69,10 @@
                                  Còn hàng
                                  </span>
                               </div> -->
-                              <div class="giaban" id="giaban_txt">Giá Bán:  <%Sanpham_model::currency_format($pro.price_new)%> ₫</div>
+                              <div style="display: block;">
+                                 <div class="giaban" id="giaban_txt">Giá Bán:  <%Sanpham_model::currency_format($pro.price_new)%> ₫</div>
+                                 <div class="giaban_cu" id="giaban_cu_txt"><%Sanpham_model::currency_format($pro.price_old)%> ₫</div>
+                              </div>
                               <div class="khungsl" >
                                  <div class="soluong" >Chọn kích thước</div>
                                  <div>
@@ -94,15 +97,21 @@
                            </div>
                         </div>
                      </div>
-                     <div class="line2gach"></div>
-                     <div class="thongtinsanpham">Thông tin sản phẩm&nbsp;&nbsp;<img src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/muitenxuong.png"></div>
-                     <div class="noidungchitiet fr-element fr-view">
-                        <%$pro.content%>
-                     </div>
-                     <div class="line2gach"></div>
-                     <div class="thongtinsanpham">Bình Luận về sản phẩm&nbsp;&nbsp;<img src="<%$smarty.const.ACW_BASE_URL_TEMPLATE%>/images/muitenxuong.png"></div>
-                     <div id="comments">
-                        <div class="fb-comments fb_iframe_widget fb_iframe_widget_fluid" data-href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$pro.pro_no%>" data-width="100%" data-numposts="5" fb-xfbml-state="rendered"><span style="height: 176px;"><iframe id="f19f8cc0f482f84" name="f32d175860200fc" scrolling="no" title="Facebook Social Plugin" class="fb_ltr" src="https://www.facebook.com/plugins/comments.php?api_key=&amp;channel_url=http%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FXBwzv5Yrm_1.js%3Fversion%3D42%23cb%3Df3338a0ca034e%26domain%3Dtentenwordpress2.top%26origin%3Dhttp%253A%252F%252Ftentenwordpress2.top%252Ff270ffbf3c7d46c%26relation%3Dparent.parent&amp;href=http%3A%2F%2Ftentenwordpress2.top%2Fban-lam-viec-albany&amp;locale=vi_VN&amp;numposts=5&amp;sdk=joey&amp;version=v2.4&amp;width=100%25" style="border: none; overflow: hidden; height: 176px; width: 100%;"></iframe></span></div>
+                     <ul class="nav nav-tabs">
+                         <li class="active"><a data-toggle="tab" href="#thongtin_sanphan">Thông tin sản phẩm</a></li>
+                         <li><a data-toggle="tab" href="#binhluan">Bình Luận về sản phẩm</a></li>                         
+                     </ul>
+                     <div class="tab-content">
+                        <div id="thongtin_sanphan" class="tab-pane fade in active">                           
+                           <div class="noidungchitiet fr-element fr-view" style="padding-left: 5px">
+                              <%$pro.content%>
+                           </div>
+                        </div>
+                        <div id="binhluan" class="tab-pane fade">                           
+                           <div id="comments">
+                              <div class="fb-comments fb_iframe_widget fb_iframe_widget_fluid" data-href="<%$smarty.const.ACW_BASE_URL%>sanpham/v/<%$pro.pro_no%>" data-width="100%" data-numposts="5" fb-xfbml-state="rendered"><span style="height: 176px;"><iframe id="f19f8cc0f482f84" name="f32d175860200fc" scrolling="no" title="Facebook Social Plugin" class="fb_ltr" src="https://www.facebook.com/plugins/comments.php?api_key=&amp;channel_url=http%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FXBwzv5Yrm_1.js%3Fversion%3D42%23cb%3Df3338a0ca034e%26domain%3Dtentenwordpress2.top%26origin%3Dhttp%253A%252F%252Ftentenwordpress2.top%252Ff270ffbf3c7d46c%26relation%3Dparent.parent&amp;href=http%3A%2F%2Ftentenwordpress2.top%2Fban-lam-viec-albany&amp;locale=vi_VN&amp;numposts=5&amp;sdk=joey&amp;version=v2.4&amp;width=100%25" style="border: none; overflow: hidden; height: 176px; width: 100%;"></iframe></span></div>
+                           </div>
+                        </div>
                      </div>
                   </section>
                </form>
@@ -149,13 +158,22 @@
       }
       var list_price = [];
       <%foreach $pricelist as $item%>
-            list_price[<%$item.pro_price_id%>] = <%$item.price_new%>;
+         var item_price = [];
+         item_price[0] =<%$item.price_new%>;
+         item_price[1] =<%$item.price_old%>;
+         list_price[<%$item.pro_price_id%>] = item_price;       
       <%/foreach%>
       $(document).ready(function() {
          $(document).off('change','#pro_size'); 
          $(document).on('change','#pro_size',function(event){
-            var val = $(this).val();
-            $('#giaban_txt').text('Giá bán: '+currency_format(list_price[val]) + ' đ');
+            var val = $(this).val();          
+            $('#giaban_txt').text('Giá bán: '+currency_format(list_price[val][0]) + ' đ');
+            if(list_price[val][1] > 0){
+               $('#giaban_cu_txt').text(currency_format(list_price[val][1]) + ' đ');
+            }else{
+               $('#giaban_cu_txt').text('');
+            }
+            
          });         
       });
    </script>   
