--- a/shared/template1/css/chitiet.css
+++ b/shared/template1/css/chitiet.css
@@ -23,27 +23,16 @@
 /* end MacIE5 */
 
 .tensp
-
 {
-
 width:100%;
-
 float:left;
-
-color:#80b600;
-
+color:#046743;
 font-size:18px;
-
 text-transform:uppercase;
-
 font-weight:bold;
-
 clear:both;
-
 margin-bottom:10px;
-
 margin-left:10px;
-
 }
 
 .noidungchitiet
@@ -112,7 +101,7 @@ margin-bottom:5px;
 
 .giaban
 {
-    color:#ff6f00;
+    color:#046743;
     font-weight:bold;	
     font-size: 16px;
 }
@@ -147,57 +136,32 @@ width: 100px;
 }
 
 .giammot
-
 {
-
 float:left;
-
-background-color:#80b600;
-
+background-color:#046743;
 color:#fff;
-
 padding-top:1px;
-
 padding-bottom:3px;
-
 padding-left:9px;
-
 padding-right:9px;	
-
 font-size:18px;
-
 cursor:pointer;
-
 margin-top:10px;
-
 margin-left:0px;
-
 }
 
 .tangmot
-
 {
-
 float:left;
-
-background-color:#80b600;
-
+background-color:#046743;
 color:#fff;
-
 padding-top:1px;
-
 padding-bottom:3px;
-
 padding-left:7px;
-
 padding-right:7px;	
-
 font-size:18px;
-
 cursor:pointer;
-
 margin-top:10px;
-
 }
 
 .sl
@@ -215,15 +179,11 @@ margin-top:10px;
 }
 
 .dathang
-
 {
-
 float:left;
-
 margin-top:10px;
-
 clear:left;	
-
+width: 176px;
 }
 
 .damin
@@ -252,16 +212,17 @@ clear:left;
 
 .dungtich,
 
-.giaban
-
-{
-
-clear:left;
-
-float:left;	
-
+.giaban{
+  clear:left;
+  float:left;	
 }
-
+.giaban_cu{  
+  float:right; 
+  color:#8e8e8e;
+  font-weight:bold; 
+  font-size: 16px;
+  text-decoration: line-through;
+}
 .btn_muahangnhanh
 
 {
@@ -575,19 +536,13 @@ font-size:12px !important;
 }
 
 .check-out .heading {
-
   font-size: 18px;
-
   font-weight: 700;
-
   text-transform: uppercase;
-
   margin-bottom: 12px;
-
-  color: #e98348;
-  border-bottom:dashed 1px #e98348;
+  color: #046743;
+  border-bottom:dashed 1px #046743;
   padding-bottom:5px
-
 }
 
 .check-out .form-checkout .heading {
@@ -608,36 +563,22 @@ font-size:12px !important;
 
 }
 
-.check-out .form-checkout .step1 .heading {
-
-  background-image: url(../images/check-out1.png);
-
+.form-checkout .heading .icon{
+    border:solid 2px #046743;
+    width: 30px;
+    height: 30px;
+    padding: 4px 9px;
+    color:#046743;
 }
-
-.check-out .form-checkout .step2 .heading {
-
-  background-image: url(../images/check-out2.png);
-
+.form-checkout .step3 .heading .icon{    
+    padding: 4px 7px;
 }
-
-.check-out .form-checkout .step3 .heading {
-
-  background-image: url(../images/check-out3.png);
-
-}
-
 .check-out .form-checkout .form-control {
-
   background-color: #f8f8f8;
-
   box-shadow: none;
-
   border: 1px solid #ddd;
-
   height: 25px;
-
   padding: 0 5px;
-
 }
 
 .check-out .form-checkout textarea.form-control {
@@ -783,11 +724,11 @@ font-size:12px !important;
 }
 
 .check-out .form-checkout .step3 .btn-dat-hang {
-  background-color: #e98348;
+  background-color: #046743;
   font-size: 15px;
   font-weight: 700;
   font-family: "Arial";
-  box-shadow: 0 -1px 0px #e36806 inset;
+  box-shadow: 0 -1px 0px rgba(2, 54, 34, 0.99) inset;
   color: #fff;
   border-radius:5px
 }
