sua meu, trang chu, fb

--- a/app/template/fontend/template1/cart.html
+++ b/app/template/fontend/template1/cart.html
@@ -102,9 +102,9 @@
                                           <input id="payment_method_cheque" type="radio" class="input-radio" name="payment_method" value="ck" checked="checked" data-order_button_text="">
                                           <label for="payment_method_cheque">
                                           Thanh toán chuyển khoản    </label>
-                                          <div class="payment_box payment_method_cheque">
+                                         <!--  <div class="payment_box payment_method_cheque">
                                              <p>Quý khách vui lòng chuyển khoản đến tk: 01234556455232. Xin cảm ơn</p>
-                                          </div>
+                                          </div> -->
                                        </li>
                                        <li class="wc_payment_method payment_method_cod">
                                           <input id="payment_method_cod" type="radio" class="input-radio" name="payment_method" value="tm" data-order_button_text="">
