--- a/app/template/fontend/template1/include/menu.html
+++ b/app/template/fontend/template1/include/menu.html
@@ -18,7 +18,7 @@
                  </div>
                  <ul class="nav_top">
                     <li>
-                       <a href="<%$smarty.const.ACW_BASE_URL%>trang-chu"> Trang chủ</a>
+                       <a href="<%$smarty.const.ACW_BASE_URL%>"> Trang chủ</a>
                     </li>
                     <li>
                        <a href="<%$smarty.const.ACW_BASE_URL%>page/v/gioi-thieu">Giới thiệu</a>
@@ -34,13 +34,13 @@
             </div>
 
             <div class="row">
-                <div class="col-md-6 col-sm-12 col-xs-12  hide_for_phone">                                     
+                <!-- <div class="col-md-6 col-sm-12 col-xs-12  hide_for_phone">                                     
                     <div class="hotline-top">
                         <span class="fa-phone-square"></span>
                         <span style="margin-left: 20px">Hotline: <span>0868 191 666 - 0868 565 181</span></span>
                     </div>          
-                </div>          
-              <div class="col-md-6 col-sm-9 col-xs-5">                
+                </div>  -->         
+              <div class="col-md-12 col-sm-12 col-xs-5">                
                   <div class="row">                     
                      <div  style="padding-right: 0px;float: right;">
                         <div class="row">
