--- a/app/template/fontend/template1/index.html
+++ b/app/template/fontend/template1/index.html
@@ -23,15 +23,17 @@
                      <%/foreach%> 				    
                   </div>
                   <!-- Left and right controls --> 				    <a class="left carousel-control" href="#myCarousel" data-slide="prev"> 				      <span class="glyphicon glyphicon-chevron-left"></span> 				      <span class="sr-only">Previous</span> 				    </a> 				    <a class="right carousel-control" href="#myCarousel" data-slide="next"> 				      <span class="glyphicon glyphicon-chevron-right"></span> 				      <span class="sr-only">Next</span> 				    </a> 				  
-               </div>               
-               <%assign var="list_sanpham" value=Sanpham_model::get_sanpham_home(39)%> 
-               <%assign var="ctg_no" value='chan-ga-goi'%>
-               <%assign var="ctg_name" value='Chăn ga gối'%>  
-               <%include 'index/list.html'%>
-               <%assign var="list_sanpham" value=Sanpham_model::get_sanpham_home(38)%> 
-               <%assign var="ctg_no" value='diem-va-ke-diem'%>
-               <%assign var="ctg_name" value='Điệm và kệ điệm'%>  
-               <%include 'index/list.html'%>               
+               </div>
+               <%assign var='ctg1' value=Category_model::get_ctg_level1()%>
+               <%foreach $ctg1 as $item%>
+                   <%assign var="list_sanpham" value=Sanpham_model::get_sanpham_home($item.ctg_id)%> 
+                   <%if count($list_sanpham) >0%>
+                     <%assign var="ctg_no" value=$item.ctg_no%>
+                     <%assign var="ctg_name" value=$item.ctg_name%>  
+                     <%include 'index/list.html'%>
+                   <%/if%>
+               <%/foreach%>
+                         
             </div>
             <%include 'include/left.html'%>
          </div>
