--- a/shared/template1/css/style.css
+++ b/shared/template1/css/style.css
@@ -176,7 +176,7 @@ img.logo{
     background: rgba(85, 204, 103, 0.49);
     color: #fff;
 }
-##menu_top .dropDownMenu li ul li {
+#menu_top .dropDownMenu li ul li {
     border-top: 0;
 }
 #menu_top ul ul ul {
@@ -195,6 +195,9 @@ img.logo{
     /*border-bottom: 2px solid #d46d32;
     padding-bottom: 2px;*/
     height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .menu_mobi {
     color: #fff;
@@ -1319,8 +1322,11 @@ transition: all 500ms ease-out 0s;
     .menu_mobi {
         display: none;
     }
-    #menu_top,.nav_top{
+    .nav_top{
          display:block;
+    }
+    #menu_top{
+         display:flex;
     }
     .vertical_bar{
         display: none;
