--- a/app/template/fontend/template1/include/footer.html
+++ b/app/template/fontend/template1/include/footer.html
@@ -1,19 +1,19 @@
 <div class="row">
          <div class="container text_top">
             <div class="col-md-3 col-sm-6">
-                            <span class="fa-list-ol"></span>
+                            <div style="float: left;padding-left: 5px"><span class="fa-list-ol"></span></div>
                             <span class="text" style="margin-left: 27px;">Đa dạng mẫu sản phẩm!</span>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <span class="fa-truck"></span>
-                                <span class="text" style="margin-left: 27px;">Giao hàng toàn quốc</span>
+                            <div style="float: left;padding-left: 5px"><span class="fa-truck"></span></div>
+                            <span class="text" style="margin-left: 27px;">Giao hàng toàn quốc</span>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <span class="fa-usd"></span>
-                                <span class="text">Thanh toán khi nhận hàng </span>
+                            <div style="float: left;padding-left: 5px"><span class="fa-usd"></span></div>
+                            <span class="text">Thanh toán khi nhận hàng </span>
                         </div>
                         <div class="col-md-3 col-sm-6">
-                            <span class="fa-phone"></span>
+                            <div style="float: left;padding-left: 5px"><span class="fa-phone"></span></div>
                             <span class="text">Mua hàng nhanh 0868 191 666 </span>
                         </div>
          </div>                                
